till data preparation

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -107,13 +107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import problem_unittests as tests\n",
+    "from collections import Counter\n",
     "\n",
     "def create_lookup_tables(text):\n",
     "    \"\"\"\n",
@@ -122,9 +129,18 @@
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
+    "    vocab_to_int={}\n",
+    "    int_to_vocab= {}\n",
     "    \n",
+    "    cnt_obj= Counter(text)\n",
+    "    i=1 \n",
+    "    for item, count in cnt_obj.items():\n",
+    "        vocab_to_int[item]= i\n",
+    "        int_to_vocab[i]= item\n",
+    "        i+= 1\n",
+    "        \n",
     "    # return tuple\n",
-    "    return (None, None)\n",
+    "    return (vocab_to_int, int_to_vocab)\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -157,20 +173,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
     "    Generate a dict to turn punctuation into a token.\n",
     "    :return: Tokenized dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
+    "    punc_dict={\n",
+    "        \".\": \"||period||\",\n",
+    "        \",\": \"||comma||\",\n",
+    "        '\"': \"||quitation||\",\n",
+    "        \";\": \"||semicolon||\",\n",
+    "        \"!\": \"||exclamation_mark||\",\n",
+    "        \"?\": \"||question_mark||\",\n",
+    "        \"(\": \"||left_parentheses||\",\n",
+    "        \")\": \"||right_parentheses||\",\n",
+    "        \"-\": \"||dash||\",\n",
+    "        \"\\n\": \"||return||\"\n",
+    "    }\n",
     "        \n",
-    "    return None\n",
+    "    return punc_dict\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -189,10 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -212,10 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -239,11 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No GPU found. Please use a GPU to train your neural network.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -298,10 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.data import TensorDataset, DataLoader\n",
@@ -315,10 +348,20 @@
     "    :param batch_size: The size of each batch; the number of sequences in a batch\n",
     "    :return: DataLoader with batched data\n",
     "    \"\"\"\n",
-    "    # TODO: Implement function\n",
+    "    x= []\n",
+    "    y=[]\n",
+    "    for start in range(0, len(words)- sequence_length-1):\n",
+    "        x.append(words[start: start+ sequence_length])\n",
+    "        y.append(words[start+ sequence_length +1])\n",
+    "    \n",
+    "    x= np.array(x)\n",
+    "    y= np.array(y)\n",
+    "    \n",
+    "    dataset= TensorDataset(torch.from_numpy(x), torch.from_numpy(y))\n",
+    "    loader= DataLoader(dataset, batch_size=batch_size)\n",
     "    \n",
     "    # return a dataloader\n",
-    "    return None\n",
+    "    return loader\n",
     "\n",
     "# there is no test for this function, but you are encouraged to create\n",
     "# print statements and tests of your own\n"
@@ -363,11 +406,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 5])\n",
+      "tensor([[ 0,  1,  2,  3,  4],\n",
+      "        [ 1,  2,  3,  4,  5],\n",
+      "        [ 2,  3,  4,  5,  6],\n",
+      "        [ 3,  4,  5,  6,  7],\n",
+      "        [ 4,  5,  6,  7,  8],\n",
+      "        [ 5,  6,  7,  8,  9],\n",
+      "        [ 6,  7,  8,  9, 10],\n",
+      "        [ 7,  8,  9, 10, 11],\n",
+      "        [ 8,  9, 10, 11, 12],\n",
+      "        [ 9, 10, 11, 12, 13]])\n",
+      "\n",
+      "torch.Size([10])\n",
+      "tensor([ 6,  7,  8,  9, 10, 11, 12, 13, 14, 15])\n"
+     ]
+    }
+   ],
    "source": [
     "# test dataloader\n",
     "\n",
