--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -476,11 +476,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn as nn\n",
     "\n",
@@ -496,13 +502,20 @@
     "        :param dropout: dropout to add in between LSTM/GRU layers\n",
     "        \"\"\"\n",
     "        super(RNN, self).__init__()\n",
-    "        # TODO: Implement function\n",
+    "        self.vocab_size= vocab_size\n",
+    "        self.output_size= output_size\n",
+    "        self.embedding_dim= embedding_dim\n",
+    "        self.hidden_dim= hidden_dim\n",
+    "        self.n_layers= n_layers\n",
     "        \n",
-    "        # set class variables\n",
+    "        self.embed_layer= nn.Embedding(vocab_size, self.embedding_dim)\n",
+    "        self.lstm_layer= nn.LSTM(self.embedding_dim, self.hidden_dim, num_layers= 2, \n",
+    "                                 dropout=dropout,batch_first= True)\n",
     "        \n",
-    "        # define model layers\n",
-    "    \n",
-    "    \n",
+    "        self.fc_dropout= nn.Dropout(0.3)\n",
+    "        self.fc= nn.Linear(self.hidden_dim, self.vocab_size)\n",
+    "        \n",
+    "        \n",
     "    def forward(self, nn_input, hidden):\n",
     "        \"\"\"\n",
     "        Forward propagation of the neural network\n",
@@ -510,10 +523,16 @@
     "        :param hidden: The hidden state        \n",
     "        :return: Two Tensors, the output of the neural network and the latest hidden state\n",
     "        \"\"\"\n",
-    "        # TODO: Implement function   \n",
-    "\n",
-    "        # return one batch of output word scores and the hidden state\n",
-    "        return None, None\n",
+    "        batch_size, seq_len= nn_input.shape[0], nn_input.shape[1]\n",
+    "        embed_output= self.embed_layer(nn_input)\n",
+    "        lstm_out, lstm_hidden= self.lstm_layer(embed_output, hidden)\n",
+    "        lstm_out= lstm_out.contiguous().view(-1, self.hidden_dim)\n",
+    "        lstm_out= self.fc_dropout(lstm_out)\n",
+    "        fc_out= self.fc(lstm_out)\n",
+    "        \n",
+    "        fc_out= fc_out.view(batch_size, seq_len, self.output_size)\n",
+    "        fc_out= fc_out[:batch_size, -1, :self.output_size].squeeze()\n",
+    "        return fc_out, lstm_hidden\n",
     "    \n",
     "    \n",
     "    def init_hidden(self, batch_size):\n",
@@ -525,8 +544,13 @@
     "        # Implement function\n",
     "        \n",
     "        # initialize hidden state with zero weights, and move to GPU if available\n",
+    "        hidden1= torch.zeros(self.n_layers, batch_size, self.hidden_dim)\n",
+    "        hidden2= torch.zeros(self.n_layers, batch_size, self.hidden_dim)\n",
+    "        if torch.cuda.is_available():\n",
+    "            hidden1= hidden1.cuda()\n",
+    "            hidden2= hidden2.cuda()\n",
     "        \n",
-    "        return None\n",
+    "        return (hidden1, hidden2)\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -552,11 +576,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def forward_back_prop(rnn, optimizer, criterion, inp, target, hidden):\n",
     "    \"\"\"\n",
@@ -569,14 +599,19 @@
     "    :return: The loss and the latest hidden state Tensor\n",
     "    \"\"\"\n",
     "    \n",
-    "    # TODO: Implement Function\n",
+    "    rnn.train()\n",
+    "    optimizer.zero_grad()\n",
+    "    if torch.cuda.is_available():\n",
+    "        inp= inp.cuda()\n",
+    "        target= target.cuda()\n",
+    "    net_output, net_hidden= rnn(inp, hidden)\n",
+    "    loss= criterion(net_output, target)\n",
+    "    loss.backward()\n",
+    "    nn.utils.clip_grad_norm_(rnn.parameters(), 5)\n",
+    "    optimizer.step()\n",
     "    \n",
-    "    # move data to GPU, if available\n",
-    "    \n",
-    "    # perform backpropagation and optimization\n",
-    "\n",
     "    # return the loss over a batch and the hidden state produced by our model\n",
-    "    return None, None\n",
+    "    return loss.item(), net_hidden\n",
     "\n",
     "# Note that these tests aren't completely extensive.\n",
     "# they are here to act as general checks on the expected outputs of your functions\n",
