--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -599,14 +599,14 @@
     "    :return: The loss and the latest hidden state Tensor\n",
     "    \"\"\"\n",
     "    \n",
-    "    rnn.train()\n",
+    "    #rnn.train()\n",
     "    optimizer.zero_grad()\n",
     "    if torch.cuda.is_available():\n",
     "        inp= inp.cuda()\n",
     "        target= target.cuda()\n",
     "    net_output, net_hidden= rnn(inp, hidden)\n",
     "    loss= criterion(net_output, target)\n",
-    "    loss.backward()\n",
+    "    loss.backward(retain_graph= True)\n",
     "    nn.utils.clip_grad_norm_(rnn.parameters(), 5)\n",
     "    optimizer.step()\n",
     "    \n",
@@ -636,10 +636,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -710,9 +708,9 @@
    "source": [
     "# Data params\n",
     "# Sequence Length\n",
-    "sequence_length =   # of words in a sequence\n",
+    "sequence_length =   300\n",
     "# Batch Size\n",
-    "batch_size = \n",
+    "batch_size = 16\n",
     "\n",
     "# data loader - do not change\n",
     "train_loader = batch_data(int_text, sequence_length, batch_size)"
@@ -728,21 +726,21 @@
    "source": [
     "# Training parameters\n",
     "# Number of Epochs\n",
-    "num_epochs = \n",
+    "num_epochs = 5\n",
     "# Learning Rate\n",
-    "learning_rate = \n",
+    "learning_rate = 0.01\n",
     "\n",
     "# Model parameters\n",
     "# Vocab size\n",
-    "vocab_size = \n",
+    "vocab_size = len(vocab_to_int)\n",
     "# Output size\n",
-    "output_size = \n",
+    "output_size = len(vocab_to_int)\n",
     "# Embedding Dimension\n",
-    "embedding_dim = \n",
+    "embedding_dim = 300\n",
     "# Hidden Dimension\n",
-    "hidden_dim = \n",
+    "hidden_dim = 512\n",
     "# Number of RNN Layers\n",
-    "n_layers = \n",
+    "n_layers = 2\n",
     "\n",
     "# Show stats for every n number of batches\n",
     "show_every_n_batches = 500"
